--- a/index.html
+++ b/index.html
@@ -40,7 +40,15 @@
    <main>
      
     <section>
-     <div id="countdownContainer"></div>
+     <div id="divCountDown">
+      <p id="countdownContainer"></p>
+      <div id="divDiasHoras" class="d-flex gap-2 text-center">
+       <p>Días</p>
+       <p>Horas</p>
+       <p>Min</p>
+       <p>Seg</p>
+      </div> 
+    </div>
 
     </section>
 
