--- a/index.html
+++ b/index.html
@@ -41,12 +41,21 @@
      
     <section>
      <div id="divCountDown">
-      <p id="countdownContainer"></p>
-      <div id="divDiasHoras" class="d-flex gap-2 text-center">
-       <p>Días</p>
+      <div id="divTiempoRestanteEnNumeros" class="d-flex gap-5 justify-content-center">
+        <p id="countdownDias" class="estilosCountdown"></p>
+        <p id="countdownHoras" class="estilosCountdown"></p>
+        <p id="countdownMinutos" class="estilosCountdown"></p>
+        <p id="countdownSegundos" class="estilosCountdown"></p>
+      </div>
+      <div id="divDiasHoras" class="d-flex gap-5 justify-content-center">
+       <div>
+        <p id="pDias">Días</p>
+       </div>
        <p>Horas</p>
        <p>Min</p>
-       <p>Seg</p>
+       <div>
+        <p id="pSegundos">Seg</p>
+       </div>
       </div> 
     </div>
 
