--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
       <p id="pOrganizador"><strong>YATCH CLUB Buenos Aires</strong></p>
       <p id="pHorario">18:00 Hs</p>
      </div>
-     <img id="yatchClubPic" src="./img/Yatch Club PM.jfif" alt="YatchClub">
+     <img id="yatchClubPic" src="https://static.wixstatic.com/media/eb4c45_8433b9e9d941450d8283252f18854523~mv2.jpg/v1/fill/w_640,h_748,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/eb4c45_8433b9e9d941450d8283252f18854523~mv2.jpg" alt="YatchClub">
 
-    </section>
+    </section> 
 
    
   </main>
