--- a/index.html
+++ b/index.html
@@ -69,7 +69,22 @@
 
     </section> 
 
+   <article>
+    <div id="divMuralFotos" class="text-center d-flex justify-content-center">
+     <p>DURANTE NUESTRA BODA UTILIZA EL HASHTAG</p>
+     <p id="pCamiYFede"><strong># CAMI y FEDE</strong></p>
+     <a class="aMuralFotos" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3OTU0NzU1MTU5OTcwMDMx?story_media_id=1732691349964850834_1465774300&igshid=YmMyMTA2M2Y=" target="_blank">VER MURAL FOTOS</a>
+    </div>
    
+
+   </article>
+
+
+
+
+
+
+
   </main>
     
     
