--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
    <section>
    <div id="divVestimenta" class="d-flex text-center justify-content-center">
     <p class="fs-2 text">CÓDIGO DE VESTIMENTA</p>
-    <p id="pEleganteSport">VESTIMENTA ELEGANTE-SPORT</p>
+    <p id="pEleganteSport">ELEGANTE-SPORT</p>
     <!-- Button trigger modal -->
     <button id="ejemploVestimenta" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">VER EJEMPLO</button>
    </div>
@@ -132,6 +132,8 @@
 
    </section>
 
+    
+   
    
 
 
