--- a/index.html
+++ b/index.html
@@ -136,33 +136,36 @@
 <div id="divConfirmacion" class="text-center">
   <h5 id="h5Confirmacion">Confirmación</h5>
   <p>¡Tenemos muchas ganas de compartir este momento con vos! Te pedimos que completes este formulario cuanto antes para confirmar tu asistencia. La fecha límite es el 15 de octubre del 2022.</p>
-  <form action="https://formsubmit.co/federicoantonio.orsi@gmail.com" method="POST">
-    <input type="text" name="name" style="width: 85%;" placeholder="Nombre y Apellido" required class="text-center mb-2">
-    <input type="email" name="email" style="width: 85%" placeholder="E-mail" required class="text-center mb-2">
-    <input type="number" id="inputCelular" style="width: 85%" placeholder="Celular" required class="text-center mb-2">
+  <!-- Formulario -->
+  
+    <form id="formulario">
+    <input id="Nombre" type="text" name="name" style="width: 85%;" placeholder="Nombre" required class="text-center mb-2">
+    <input id="Apellido" type="text" name="name" style="width: 85%;" placeholder="Apellido" required class="text-center mb-2">
+    <input id="Email" type="email" name="email" style="width: 85%" placeholder="E-mail" required class="text-center mb-2">
+    <input type="number" id="Celular" style="width: 85%" placeholder="Celular" required class="text-center mb-2">
     <input type="hidden" name="_subject" value="Nueva Confirmación de Cami & Fede Form!!">
     <input type="hidden" name="_cc" value="camisolguerra@gmail.com">
-    <select class="form-select mb-2" aria-label="Default select example">
+    <select id="Edad" class="form-select mb-2" aria-label="Default select example">
       <option selected class="mb-2">Edad</option>
-      <option value="1">Adulto/a</option>
-      <option value="2">Niño/a</option>
-      <option value="3">Menor</option>
+      <option  value="Adulto/a">Adulto/a</option>
+      <option  value="Niño/a">Niño/a</option>
+      <option  value="Menor">Menor</option>
     </select>
-    <select class="form-select mb-2" aria-label="Default select example">
+    <select id="Menu" class="form-select mb-2" aria-label="Default select example">
       <option selected >Tipo de Menú</option>
-      <option value="1">Sin Preferencias</option>
-      <option value="2">Menú Vegetariano</option>
-      <option value="2">Menú Vegano</option>
-      <option value="3">Menú Celíaco</option>
-      <option value="2">Intolerancia a la Lactosa</option>
+      <option value="Sin Preferencia">Sin Preferencias</option>
+      <option value="Menú Vegetariano">Menú Vegetariano</option>
+      <option value="Menú Vegano">Menú Vegano</option>
+      <option value="Menú Celíaco">Menú Celíaco</option>
+      <option value="Intolerancia a la Lactosa">Intolerancia a la Lactosa</option>
     </select>
-    <select class="form-select mb-2" aria-label="Default select example">
+    <select id="Asistencia" class="form-select mb-2" aria-label="Default select example">
       <option selected class="mb-2">Asistencia</option>
-      <option value="1">Asistiré</option>
-      <option value="2">No Asistiré</option>
+      <option value="Asistiré">Asistiré</option>
+      <option value="No Asistiré">No Asistiré</option>
       
     </select>
-    <textarea name="mensaje" id="" cols="38" rows="02" placeholder="Mensaje para los Novios" class="mb-2"></textarea>
+    <textarea name="mensaje" id="mensajeParaNovios" cols="27" rows="02" placeholder="Mensaje para los Novios" class="mb-2"></textarea>
     <button id="botonSubmit" type="submit">Confirmar</button>
 </form>
 </div>
@@ -192,6 +195,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="code.js"></script>
 </body>
 </html>
