--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   <p>¡Tenemos muchas ganas de compartir este momento con vos! Te pedimos que completes este formulario cuanto antes para confirmar tu asistencia. La fecha límite es el 15 de octubre del 2022.</p>
   <!-- Formulario -->
   
-    <form id="formulario">
+    <form id="formulario" action="https://formsubmit.co/federicoantonio.orsi@gmail.com" method="POST">
     <input id="Nombre" type="text" name="name" style="width: 85%;" placeholder="Nombre" required class="text-center mb-2">
     <input id="Apellido" type="text" name="name" style="width: 85%;" placeholder="Apellido" required class="text-center mb-2">
     <input id="Email" type="email" name="email" style="width: 85%" placeholder="E-mail" required class="text-center mb-2">
