--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
     <input type="number" id="Celular" style="width: 85%" placeholder="Celular" required class="text-center mb-2">
     <input type="hidden" name="_subject" value="Nueva Confirmación de Cami & Fede Form!!">
     <input type="hidden" name="_cc" value="camisolguerra@gmail.com">
-    <select id="Edad" class="form-select mb-2" aria-label="Default select example">
+    <select id="Edad" required="required" class="form-select mb-2" aria-label="Default select example">
       <option selected class="mb-2">Edad</option>
       <option  value="Adulto/a">Adulto/a</option>
       <option  value="Niño/a">Niño/a</option>
       <option  value="Menor">Menor</option>
     </select>
-    <select id="Menu" class="form-select mb-2" aria-label="Default select example">
+    <select id="Menu" class="form-select mb-2" aria-label="Default select example" required>
       <option selected >Tipo de Menú</option>
       <option value="Sin Preferencia">Sin Preferencias</option>
       <option value="Menú Vegetariano">Menú Vegetariano</option>
@@ -159,7 +159,7 @@
       <option value="Menú Celíaco">Menú Celíaco</option>
       <option value="Intolerancia a la Lactosa">Intolerancia a la Lactosa</option>
     </select>
-    <select id="Asistencia" class="form-select mb-2" aria-label="Default select example">
+    <select id="Asistencia" class="form-select mb-2" aria-label="Default select example" required>
       <option selected class="mb-2">Asistencia</option>
       <option value="Asistiré">Asistiré</option>
       <option value="No Asistiré">No Asistiré</option>
